Fixed WASD
dane made both work at once and messed up the key.js
I fixed (hint: move mouse up to upper right hand corner)

--- a/role playing game thing/css_code_for_role_playing_game_thing.css
+++ b/role playing game thing/css_code_for_role_playing_game_thing.css
@@ -286,3 +286,39 @@ div#talkingguy
 	height: 300px;
 
 }
+#controls
+{
+	top: 0;
+	right: 0;
+	position: absolute;
+	width: 200px;
+	height: 100px;
+	border-radius: 20px;
+	border-width: medium;
+	border-color: black;
+	background-image: linear-gradient(-90deg, grey, silver);
+	text-align: center;
+	opacity: 0;
+}
+#controls:hover
+{
+	opacity: 1;
+}
+#bar
+{
+	position: relative;
+	top: 10px;
+	left: 25px;
+	width: 150px;
+	height: 50px;
+	background-color: green;
+}
+#slider
+{
+	position: relative;
+	top: 3px;
+	width: 69px;
+	height: 44px;
+	background-color: red;
+	margin: 3px;
+}
